--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@types/node": "^13.9.1",
         "@typescript-eslint/eslint-plugin": "3.9.1",
         "@typescript-eslint/parser": "3.9.1",
+        "codelyzer": "^6.0.1",
         "eslint": "7.7.0",
         "eslint-config-prettier": "^6.10.0",
         "eslint-plugin-import": "^2.20.1",
