--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
         "@nestjs/schematics": "^7.0.0",
         "@types/express": "^4.17.3",
         "@types/node": "^13.9.1",
+        "@types/passport": "^1.0.4",
+        "@types/passport-jwt": "^3.0.3",
         "@typescript-eslint/eslint-plugin": "3.9.1",
         "@typescript-eslint/parser": "3.9.1",
         "codelyzer": "^6.0.1",
